objects/ortoo_qra__User_Object_Settings__c.object
<CustomObject>
    <fields>
        <fullName>ortoo_qra__Assignment_Quota_Daily__c</fullName>
        <label>Assignment Quota Daily</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Assignment_Quota_Hourly__c</fullName>
        <label>Assignment Quota Hourly</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Assignment_Quota_Monthly__c</fullName>
        <label>Assignment Quota Monthly</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Assignment_Quota_Reset_Time__c</fullName>
        <label>Assignment Quota Reset Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Assignment_Quota_Weekly__c</fullName>
        <label>Assignment Quota Weekly</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__Object__c</fullName>
        <label>Object</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ortoo_qra__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Object_Settings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>User Object Settings</label>
    <nameField>
        <label>User Object Settings Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Object Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>